Fix for DFL-3103: URL list and waterfall graph misaligned in O12 Mac

--- a/src/network/network_style.css
+++ b/src/network/network_style.css
@@ -49,19 +49,20 @@
   padding: 0;
   margin: 0;
   padding-top: 23px;
-  margin-top: 1rem;
+  margin-top: 11px;
 }
 
-.network-timeline-row,
 .network-graph-row
 {
-  height: 1rem;
+  line-height: 14px;
+  padding-bottom: 3px;
   padding-top: 1px;
-  padding-bottom: 12px;
 }
 
 .network-timeline-row
 {
+  height: 22px;
+  padding-top: 2px;
   position: relative;
 }
 
@@ -115,6 +116,11 @@
   color: #808080;
 }
 
+.network-log-url-list li
+{
+  line-height: 13px;
+}
+
 .network-log-url-list li .network-url
 {
   padding-left: 5px;
@@ -126,6 +132,7 @@
   vertical-align: middle;
   display: inline-block;
   max-width: 88%;
+  line-height: 13px;
 }
 
 .network-log-url-list .log-url-list-status
@@ -188,12 +195,14 @@
 {
   padding-bottom: 6px;
   padding-top: 5px;
+  line-height: 13px;
 }
 
 .network_logger .network-main-container .sortable-table th
 {
   padding-bottom: 7px;
   padding-top: 5px;
+  line-height: 13px;
   border-left-color: rgba(0, 0, 0, 0.09);
 }
 
